# citation-utils

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  justfile  mkdocs.yml  nb.ipynb  objects.inv  pyproject.toml  sitemap.xml  test.ipynb  zensical.toml
.github/workflows/: ci.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api-build/: index.html
0.1.0/api-extraction/: index.html
0.1.0/api-types/: index.html
0.1.0/reference/: index.html
0.1.0/search/: search_index.json
api-build/: index.html
api-extraction/: index.html
api-types/: index.html
benchmarks/: benchmark_extraction.py
citation_docket/: __init__.py  _types.py  citation.py  document.py  extracts.py  main.py  sc_website_2023.py  simple_matcher.py
citation_docket/regexes/: __init__.py  constructed_ac.py  constructed_am.py  constructed_bm.py  constructed_gr.py  constructed_jib.py  constructed_oca.py  constructed_pet.py  constructed_udk.py
citation_utils/: __init__.py  _types.py  citation.py  document.py  extracts.py
citeable/: index.html
components/: index.html
docs/: api-build.md  api-extraction.md  api-types.md  citeable.md  development.md  index.md  reference.md  releases.md  sqlite.md  structure.md
nb/: nb.ipynb  test.ipynb
notebooks/: citation_explorer.py
plans/: optimize.md
reference/: index.html
search/: search_index.json
sqlite/: index.html
structure/: index.html
tests/: test_citation_regressions.py  test_docs_contract.py  test_formatting.py  test_occurrences.py  test_report_regressions.py  test_simple_matcher.py  test_version.py
(+40 files in other folders)
