[project]
name = "citation-utils"
version = "0.6.0"
description = "Pattern matching Philippine Supreme Court citations."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "citation-date >= 0.3.0",
    "citation-report >= 0.3.0",
    "python-dateutil >= 2.9.0.post0",
]

[tool.uv.sources]
citation-date = { path = "../citation-date", editable = true }
citation-report = { path = "../citation-report", editable = true }

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # docs
    "zensical >= 0.0.50",
    # notebook examples
    "marimo >= 0.23.14",
    "polars >= 1.42.1",
    # testing
    "pytest >= 9.1",
    "pytest-cov >= 7.1",
]

[tool.pytest.ini_options]
minversion = "9.1"
addopts = "-ra -q --cov=citation_utils --cov-branch --doctest-modules"
testpaths = ["tests", "src/citation_utils"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["F401", "F403"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]
